# tree-sitter-norg2

./: CHANGELOG.md  Cargo.toml  README.md  binding.gyp  grammar.js  package.json  test.norg  test.norg2  todos.norg
.github/workflows/: fuzzing.yml  tests.yml
src/: grammar.json  node-types.json  parser.c  scanner.cc
test/corpus/: attached_modifiers.txt  definitions.txt  delimiting_modifiers.txt  edge_cases.txt  footnote.txt  free_form_markup.txt  headings.txt  intersection_modifier.txt  links.txt  ordered_list.txt  paragraphs.txt  quote.txt  tables.txt  tags.txt  unordered_list.txt
